--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@zoralabs/v3": "^1.0.9",
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0",
+    "hardhat-contract-sizer": "^2.5.1"
   }
 }
